apps/cyberchef/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cyberchef
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cyberchef
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: cyberchef
      securityContext:
        runAsNonRoot: true
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cyberchef
          image: ghcr.io/gchq/cyberchef:11.3.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 100
            runAsGroup: 101
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            periodSeconds: 30
            httpGet:
              path: /
              port: http
          readinessProbe:
            periodSeconds: 30
            httpGet:
              path: /
              port: http
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
            requests:
              memory: 128Mi
              cpu: 100m
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir: {}
