apps/cyberchef/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  labels:
    app.kubernetes.io/name: cyberchef
spec:
  selector:
    app.kubernetes.io/name: cyberchef
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
